refactor: test code quality by sonarqube